# sk0pe

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
demos/: array_bounds.c  branching_paths.c  function_calls.c  multi_stage_validator.c  simple_math.c  simple_password.c
scripts/: demo_emu_funcs.py  w1dump_runner.py  w1dump_symbolic_emu.py
skope/: __init__.py  session.py
skope/backends/: __init__.py  base.py  maat.py  triton.py  unicorn.py
skope/core/: __init__.py  arch.py  errors.py  memory.py  permissions.py  state.py
skope/emu/: __init__.py  arch.py  base.py  calling_convention.py  instruction_simplifier.py  maat.py  miasm.py  triton.py  unicorn.py
skope/emu/arch/: __init__.py  flags.py  registers.py
skope/formats/: __init__.py  w1dump.py
skope/load/: __init__.py  lief_loader.py  w1dump_loader.py
skope/snapshot/: __init__.py  base.py  lief.py  w1dump.py
