[project]
name = "sk0pe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "capstone>=5.0.6",
    "keystone-engine",
    "lief",
    "msgpack>=1.1.1",
    "redlog-py>=0.1.1",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "triton-library",
    "typer>=0.16.0",
    "unicorn>=2.1.3",
]

[tool.uv.sources]
lief = { git = "https://github.com/lief-project/LIEF.git", subdirectory = "api/python" }
keystone-engine = { git = "https://github.com/redthing1/keystone-engine.git", subdirectory = "bindings/python" }
triton-library = { git = "https://github.com/redthing1/triton" }
